[package]
name = "wiki-get-links"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async_parse_wiki_text = { git = "https://github.com/thinkrapido/async_parse_wiki_test.git" }

[dev-dependencies]
futures-time = "3.0.0"
parking_lot = "0.12.1"
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "macros"] }
